package dev.ipf.whitenoise.model

enum class AvatarAsset {
    Badger,
    WebAionyHaust,
    OpenCircuit,
    Fox,
    WebChristopherCampbell,
    CipherWheel,
    Marmot,
    WebIanDooley,
    Pebble,
    Ostrich,
...
